Creación del autoload.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "autoload": {
         "psr-4": {
             "Fw\\": "Fw/",
-            "App\\": "App/"
+            "FwApp\\": "App/"
         }
     },
     "authors": [
