--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         "psr-4": {
             "Fw\\": "Fw/",
             "FwApp\\": "App/"
-        }
+        }, 
+        "files": [
+            "Fw/helpers/views.php"
+        ]
     },
     "authors": [
         {
