--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         }
     ],
     "require": {
-        "illuminate/database": "^9.2.0",
-        "illuminate/events": "^9.2.0"
+        "php": "^8.0.2"
     },
     "config": {
         "allow-plugins": {
