--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "flikimax/wp-fworm": "^1.0"
+        "dbout/wp-orm": "^3.3"
     },
     "config": {
         "allow-plugins": {
