--- a/Fw/Structures/templateAutoload/composer.json
+++ b/Fw/Structures/templateAutoload/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "# %NAMESPACE%\\": "App/"
-        }
+            "# %PSR-4%": "App/"
+        }# %FILES%
     }
 }
